11.18. Revisando e ajustando as mensagens de validação com o uso de DTOs